--- a/css/awesome.css
+++ b/css/awesome.css
@@ -1,81 +1,71 @@
 .awesome{
     margin-top: 0;
     padding-top: 100px;
+    padding-bottom: 89px;   
 }
 
 
 .awesome_title{  
-    margin-top: 100px;  
-    font-family: Raleway;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 36px;
-    line-height: 42px;
-    color: #212121;
-    text-align: center; 
+    margin-top: 100px;     
 }
 
 .awesome_line{    
     margin: auto;
-    margin-top: 25px;
-    width: 64px;
-    height: 2px;   
+    margin-top: 25px;    
     border: 1px solid #D98943;
 }
 .awesome_text{
     margin-top: 30px;
-    text-align: center;
-    font-family: Open Sans;
-    font-size: 14px;
-    line-height: 19px;
-    color: #86878B;
+    
 }
 
 .row{
     margin-top: 36px;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
 }
 
+.row_wrapper{
+    display: flex;
+    margin: 0 -15px;
+    margin-top: 36px;
+    
+}
 
 .row-item{
+    width: 350px;
+    margin: 0 15px;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
-    width: 350px;
-}
+   }
 
-.row-item_icon__border{   
+.row-item_icon{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 31px;
     width: 70px;
     height: 70px;
-    mix-blend-mode: normal;
     border: 1px solid #D98943;
     border-radius: 50%;
-    align-items: center;
-    justify-content: center;    
 }
 
-.row-item_icon__img{   
-    width: 23px;
-    height: 30px;
-}
-
-.row-item__title{
+.row-item_title{
     margin-top: 30px;
-    width: 189px;
-    height: 29px;
     font-family: Open Sans;
+    font-style: normal;
     font-weight: bold;
     font-size: 20px;
     line-height: 27px;
     color: #333333;
-    text-align: center;
+    flex: 1 0 auto;
 }
 
-.row-item__text{
+.row-item_text{
     margin-top: 16px;
+    margin-bottom: 109px;
     font-family: Open Sans;
     font-style: normal;
     font-weight: normal;
@@ -83,6 +73,5 @@
     line-height: 19px;
     text-align: center;
     color: #000000;
-    padding-left: 1px;
-    padding-right: 1px;
+    flex: 1 0 auto;
 }
