--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("awesome.css");
+@import url("pricing.css");
 
 *{
     margin: 0;
@@ -15,19 +16,30 @@
     padding: 0 15px;  
    }
 
+   .title{
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 42px;
+    color: #212121;
+    text-align: center; 
+    text-transform: uppercase;
+   }
 
-@font-face {
-    font-family: "Raleway";
-    src: url(../fonts/Raleway-Regular.ttf);        
-    font-style: normal; 
-    font-weight: normal;    
-    }
+   .line{
+    width: 64px;
+    height: 2px;  
+   }
 
-    @font-face {       
-        font-family: "Open Sans";
-        src: url(../fonts/opensans.ttf);   
-        font-style: normal; 
-        font-weight: normal; 
-        }
+   .textundertitle{
+    text-align: center;
+    font-family: Open Sans;
+    font-size: 14px;
+    line-height: 19px;
+    color: #86878B;
+   }
+   
 
-    
+
+   
