--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 @import url("header.css");
 @import url("social.css");
 @import url("footer.css");
-
+@import url("feautures.css");
 
 *{
     margin: 0;
