--- a/css/header.css
+++ b/css/header.css
@@ -87,7 +87,7 @@
 */
 .header-form{
     width: 370px;
-    height: 370px;
+   
     background-color: #FFFFFF;
     border-radius: 8px;
     text-align: center;  
@@ -113,33 +113,30 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 100%;
-    height: 316px;    
-    padding-bottom: 62px;
-  
+    width: 100%;   
+    padding-bottom: 62px;  
+}
+
+.form_item{
+    margin-top: 19px;
+}
+
+.form_item:first-child{
+    margin-top: 44px;
 }
 
 .form_item__lbl{
     display: block;
     margin-top: 0;
     margin-left: 59px;   
-    font-family: Open Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    color: #BDBDBD;
-    text-align: left;
+   
 }
 
 .form_item__input{
     display: block;
     margin-top: 0;
     margin-left: 59px;
-    border: 0;
-    border-bottom: 1px solid #BDBDBD;   
-    outline: none;    
-    padding-top: 16px;
-    padding-left: 5px;
+   
     width: 70%;
 }
 
@@ -166,8 +163,12 @@
     line-height: 57px;
     border: 0;
     border-radius: 0 0 7px 7px;
+    transition: 0.3s;
 }
 
 .form-btn:hover{
     cursor: pointer;
+    background-color: #d65656;
+    color: #eccfcf;
+
 }
