--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 @import url("social.css");
 @import url("footer.css");
 @import url("feautures.css");
+@import url("contact.css");
 
 *{
     margin: 0;
@@ -64,6 +65,10 @@
     width: 135px;
     height: 42px;
     padding: 11px 26px;
+    
+   }
+
+   .button{
     font-family: Open Sans;
     font-style: normal;
     font-weight: 600;
@@ -71,6 +76,13 @@
     text-align: center;
     color: #FFFFFF;
     border: 1px solid #FFFFFF;
+    transition: 0.5s;
+   }
+   .button:hover{
+    color: #000000;
+    border: 1px solid #000000;
+    background: #ffffff;
+
    }
 
    .text{
@@ -81,10 +93,25 @@
     align-items: center;
     line-height: 19px;
     
-
    }
  
   
+.form-lbl{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    color: #BDBDBD;
+    text-align: left;
+}
 
+.form-input{
+    border: 0;
+    border-bottom: 1px solid #BDBDBD;   
+    outline: none;    
+    padding-top: 16px;
+    padding-left: 5px;
+    padding: 16px 5px 1px 5px;
+}
 
    
