--- a/css/feautures.css
+++ b/css/feautures.css
@@ -1,16 +1,21 @@
 .feautures{
     height: 600px;
     width: 100%;
+    padding-top: 125px;
 }
 
-.tabs-wrapper{
+.feautures-wrapper{
     display: flex;
-    flex-direction: column;
-    max-height: 350px;
+    justify-content: space-between;
+    margin: 0 -15px;
+}
+
+.feautures_left{
+    margin: 15px;
+    display: flex;
+    flex-direction: column;   
     justify-content: space-around;
-    margin-top: 50px;
-
-
+    
 }
 
 .tab_item{
@@ -18,5 +23,54 @@
     height: 110px;
     background-color: #333333;
     border-radius: 4px;
+    margin-top: 10px;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+    display: flex;
+    align-items: center;   
+    justify-content: center;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    transition: 0.3s;
+}
+.tab_item:first-child{
+    margin-top: 0;
+}
+.tab_item:hover{
+    background-color: #EC7979;
+    cursor: pointer;
+    
+}
+.feautures_center{
+    margin: 15px;
+    max-width: 572px;   
+}
 
+.feautures-title{
+    color: #000000;    
+}
+
+.feautures_text{
+   width: 100%;
+   margin-top: 58px;
+    color: #86878B;
+    text-transform: uppercase;
+}
+
+.feautures_link{
+background-color: #EC7979;
+margin-top: 89px;
+}
+
+.feautures_right{
+    margin: 15px;
+    max-width: 320px;
+}
+
+.feautures_image{
+    display: block;
+   width: 100%;
 }
