--- a/css/style.css
+++ b/css/style.css
@@ -109,9 +109,16 @@
     border: 0;
     border-bottom: 1px solid #BDBDBD;   
     outline: none;    
-    padding-top: 16px;
-    padding-left: 5px;
-    padding: 16px 5px 1px 5px;
+    padding: 3px 5px 1px 5px;
+}
+
+.h3-title{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;   
+    text-transform: uppercase;
+    
 }
 
    
