--- a/css/awesome.css
+++ b/css/awesome.css
@@ -1,14 +1,11 @@
 .awesome{
     margin-top: 0;
-    padding-top: 100px;
-    padding-bottom: 89px;   
+    padding-top: 6.25rem;
+    padding-bottom: 5.5625rem;   
 }
 
-
-
 .awesome_text{
-    margin-top: 30px;
-    
+    margin-top: 30px;    
 }
 
 .row{
@@ -38,19 +35,18 @@
     justify-content: center;
     align-items: center;
     margin-top: 31px;
-    width: 70px;
-    height: 70px;
+    width: 4.375rem;
+    height: 4.375rem;
     border: 1px solid #D98943;
     border-radius: 50%;
     color: #D98943;
-    font-size: 21px;
+    font-size: 1.3125rem;
     text-align: center;
 }
 
 .row-item_title{
-    margin-top: 30px;
-    
-    line-height: 27px;
+    margin-top: 30px;    
+    line-height: 1.6875rem;
     color: #333333;
     flex: 1 0 auto;
 }
@@ -61,9 +57,16 @@
     font-family: Open Sans;
     font-style: normal;
     font-weight: normal;
-    font-size: 14px;
-    line-height: 19px;
+    font-size: 0.875rem;
+    line-height: 1.1875rem;
     text-align: center;
     color: #000000;
     flex: 1 0 auto;
+}
+
+
+@media(max-width:768px){
+    .awesome{
+       padding-bottom: 2rem;   
+    }
 }
