--- a/css/axure.css
+++ b/css/axure.css
@@ -23,7 +23,7 @@
     font-family: Raleway;
     font-style: normal;
     font-weight: normal;
-    font-size: 36px;   
+    font-size: 2.25rem;   
     color: #FFFFFF;
     text-align: center; 
     text-transform: uppercase;   
@@ -44,7 +44,7 @@
     font-family: Raleway;
     font-style: normal;
     font-weight: 300;
-    font-size: 16px;
+    font-size: 1rem;
     text-align: center;
     color: rgba(255, 255, 255, 0.8);
 }
