--- a/css/customers.css
+++ b/css/customers.css
@@ -22,7 +22,7 @@
 .customer-review_item__text{   
    padding: 9px 22px 6px 23px;
    font-family: Open Sans;
-   font-size: 14px;
+   font-size: 0.875rem;
    color: #86878B;
    text-align: center;
    background-color: #E2E2E2;
@@ -75,7 +75,7 @@
     font-family: Open Sans;
     font-style: normal;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 1.25rem;
     color: #333333;
    }
 
@@ -83,8 +83,19 @@
     font-family: Open Sans;
     font-style: normal;
     font-weight: normal;
-    font-size: 14px;    
+    font-size: 0.875rem;    
     color: #86878B;   
+   }
+
+   @media(max-width:1024px){
+    .customer-review_wrapper{
+        display: flex;
+        flex-direction: column;
+        align-items: center;        
+    }
+    .customer-review_item__text{   
+        margin-top: 20px;
+    }
    }
 
  
