--- a/css/pricing.css
+++ b/css/pricing.css
@@ -39,8 +39,8 @@
     font-family: Open Sans,sans-serif;
     font-style: normal;
     font-weight: bold;
-    font-size: 20px;
-    line-height: 50px;
+    font-size: 1.25rem;
+    line-height: 3.125rem;
     text-align: center;
     color: #FFFFFF;       
 }
@@ -50,8 +50,8 @@
     font-family: Raleway,sans-serif;
     font-style: normal;
     font-weight: bold;
-    font-size: 35px;
-    line-height: 100px;
+    font-size: 2.1875rem;
+    line-height: 6.25rem;
     text-align: center;
     color: #FFFFFF;
 }
@@ -62,8 +62,8 @@
     font-family: Open Sans,sans-serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 14px;
-    line-height: 50px;
+    font-size: 0.875rem;
+    line-height: 3.125rem;
     text-align: center;    
     color: rgba(255, 255, 255, 0.5);
 }
@@ -78,8 +78,8 @@
     font-family: Open Sans,sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 14px;
-    line-height: 40px;
+    font-size: 0.875rem;
+    line-height: 2.5rem;
     text-align: center;
     color: #86878B;
 }
