--- a/css/header.css
+++ b/css/header.css
@@ -6,7 +6,7 @@
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
-   padding-top: 108px;    
+   padding-top: 6.75rem;    
 }
 
 .header_mainwrapper
@@ -153,10 +153,38 @@ width: 100%;
 }
 
 @media(max-width:768px){
+    .header{
+        height: auto;
+    }
     html{
         font-size: 14px;
     }
     .form-content{      
         padding: 10px 30px 30px 30px;
+ }
+
+ .header_mainwrapper{   
+     flex-direction: column;   
+}
+form{
+    width: 40%;
+    margin: 20px auto 20px;
+}
+.header-left{
+    margin: 0 auto;
+    text-align: center;
+}
+
+.header_title::after{
+    content: "";
+    width: 5rem;
+    height: 1px;
+    background-color: #FFFFFF;
+    display: block;
+    margin: 32px auto;
+}
+.header{
+    margin-top: 15px;
+    
  }
 }
