--- a/css/nav.css
+++ b/css/nav.css
@@ -76,3 +76,26 @@
    width: 100%;
  }
 
+.hamburger{
+  width: 40px;
+  height: 30px;  
+  position: absolute;
+  right: 20px;
+  transition: 0.3s;
+}
+
+
+
+ .hamburger_item{
+display: block;
+width: 100%;
+height: 2px;
+background-color: blue;
+margin-bottom: 10px;
+ }
+
+ .hamburger:hover{
+   .hamburger_item-1{
+     transform: rotate: 45deg;
+   }
+ }
