--- a/css/social.css
+++ b/css/social.css
@@ -12,7 +12,6 @@
 }
 
 .social-wrapper_title{
-    margin: 15px;
    display: flex;
    flex-direction: column;
 }
@@ -53,7 +52,7 @@
     font-size: 1.5rem;
     font-weight: 600;    
     color: #a5a2a2;
-    transition: 0.3s;
+    transition: all 0.3s ease-in-out ;
   }
 
   .social_item__link:hover{
