--- a/css/axure.css
+++ b/css/axure.css
@@ -1,6 +1,6 @@
-.axure{
+.axure {
     background-image: url(/img/background_axure.png);
-    height: 326px;  
+    height: 326px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -8,7 +8,7 @@
     padding-top: 58px;
 }
 
-.axure::after{
+.axure::after {
     content: "";
     width: 100%;
     height: 100%;
@@ -19,27 +19,27 @@
     left: 0;
 }
 
-.axure_title{   
+.axure_title {
     font-family: Raleway;
     font-style: normal;
     font-weight: normal;
-    font-size: 2.25rem;   
+    font-size: 2.25rem;
     color: #FFFFFF;
-    text-align: center; 
-    text-transform: uppercase;   
+    text-align: center;
+    text-transform: uppercase;
 }
 
-.axure_title::after{
+.axure_title::after {
     content: "";
     width: 64px;
     height: 2px;
     background-color: #FFFFFF;
-    display: block;      
-    margin: auto;  
+    display: block;
+    margin: auto;
     margin-top: 25px;
 }
 
-.axure_text{
+.axure_text {
     margin-top: 34px;
     font-family: Raleway;
     font-style: normal;
@@ -49,11 +49,18 @@
     color: rgba(255, 255, 255, 0.8);
 }
 
-.axure_link{   
-    margin: 57px auto;    
+.axure_link {
+    margin: 57px auto;
     transition: 0.3s;
 }
 
-.axure_link:hover{
-    box-shadow: 7px 7px 5px rgba(0,0,0,0.6);
+.axure_link:hover {
+    box-shadow: 7px 7px 5px rgba(0, 0, 0, 0.6);
+}
+
+@media(max-width:576px) {
+    .axure {
+        height: auto;
+        padding-bottom: 5px;
+    }
 }
