--- a/css/nav.css
+++ b/css/nav.css
@@ -10,6 +10,9 @@
     padding-top: 20px;
    
   }
+  .menuBurger{
+    display: none;
+  }
     
 .nav_wrapper{
   display: flex;
@@ -44,7 +47,7 @@
   }
 
 .navigation_menu__item{
-  margin-right: 48px;
+  margin-right: 3rem;
 }
 
 .navigation_menu__item:last-child{
@@ -55,7 +58,7 @@
   font-family: Open Sans;
   font-style: normal;
   font-weight: 600;
-  font-size: 0.9375rem;
+  font-size: 15px;
   text-transform: capitalize;  
   color: rgba(255, 255, 255, 0.7);
   position: relative;
@@ -75,27 +78,96 @@
 .navigation_menu__link:hover:after{
    width: 100%;
  }
+/************************************************************
 
-.hamburger{
-  width: 40px;
-  height: 30px;  
-  position: absolute;
-  right: 20px;
-  transition: 0.3s;
+***********************************************************/
+
+
+.topnav {
+  overflow: hidden;
+  position: relative;
+  right: 30px;
+  top: -50px;
+  background-color: #000000;
+  width: 100vw;
+}
+
+.topnav a {
+ 
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color:#000000;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+.topnav{
+  display: none;
+}
+
+@media(max-width:768px){
+ 
+  .navigation_menu__item{
+    margin-right: 2.5rem;
+  }
+    
+}
+
+@media (max-width: 576px) {
+  
+  .topnav{
+    display: block;
+    width: 100wh;
+
+  }
+  .topnav a {
+      display: none;
+  }
+  .topnav a.icon {
+      float: right;
+      display: block;
+  }
+}
+
+@media(max-width: 576px) {
+  .topnav.responsive {
+      position: relative;
+    
+  }
+  .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+  }
+  .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+  }
+}
+
+ @media(max-width: 576px) {
+  .navigation_menu{
+      display: none;
+  }
+
 }
 
 
 
- .hamburger_item{
-display: block;
-width: 100%;
-height: 2px;
-background-color: blue;
-margin-bottom: 10px;
- }
 
- .hamburger:hover{
-   .hamburger_item-1{
-     transform: rotate: 45deg;
-   }
- }
