--- a/css/pricing.css
+++ b/css/pricing.css
@@ -1,4 +1,4 @@
-.price{
+.price {
     width: 100%;
     background-color: #F5F5F5;
     background-size: contain;
@@ -6,48 +6,49 @@
     padding-top: 80px;
 }
 
-.price_text{
+.price_text {
     margin-top: 34px;
 }
 
-.price-wrapper{
+.price-wrapper {
     margin-top: 62px;
-    margin-bottom: 80px;  
+    margin-bottom: 80px;
     display: flex;
     justify-content: space-between;
     margin: 62px -15px 0;
+    flex-wrap: no-wrap;
 }
 
-.card{   
+.card {
     display: flex;
-    flex-direction: column;  
+    flex-direction: column;
     margin: 0 15px;
     width: 340px;
     transition: 0.3s;
-  }
+}
 
-  .card:hover{
-    box-shadow: 7px 7px 5px rgba(0,0,0,0.6);
-  }
+.card:hover {
+    box-shadow: 7px 7px 5px rgba(0, 0, 0, 0.6);
+}
 
-  .card_item{ 
-   margin-bottom: 2px;
-  }
- 
- .card_title__item{       
-    background-color: #333333;    
-    font-family: Open Sans,sans-serif;
+.card_item {
+    margin-bottom: 2px;
+}
+
+.card_title__item {
+    background-color: #333333;
+    font-family: Open Sans, sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 1.25rem;
     line-height: 3.125rem;
     text-align: center;
-    color: #FFFFFF;       
+    color: #FFFFFF;
 }
 
-.card_cost__item{  
+.card_cost__item {
     background-color: #333333;
-    font-family: Raleway,sans-serif;
+    font-family: Raleway, sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 2.1875rem;
@@ -56,26 +57,26 @@
     color: #FFFFFF;
 }
 
-.card_free__item{
-    flex: 1 0 auto; 
-    background-color: #333333;   
-    font-family: Open Sans,sans-serif;
+.card_free__item {
+    flex: 1 0 auto;
+    background-color: #333333;
+    font-family: Open Sans, sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 0.875rem;
     line-height: 3.125rem;
-    text-align: center;    
+    text-align: center;
     color: rgba(255, 255, 255, 0.5);
 }
 
-.card_free__item:hover{
+.card_free__item:hover {
     background: #D98943;
 }
 
-.card_little__item{
-    flex: 1 0 auto; 
+.card_little__item {
+    flex: 1 0 auto;
     background-color: #fff;
-    font-family: Open Sans,sans-serif;
+    font-family: Open Sans, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 0.875rem;
@@ -84,4 +85,13 @@
     color: #86878B;
 }
 
-
+@media(max-width:1024px) {
+    .price-wrapper {
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 20px;
+    }
+    .card {
+        margin-bottom: 20px;
+    }
+}
